--- a/lab2.html
+++ b/lab2.html
@@ -11,10 +11,11 @@
 
   <p> This page is all about <a href="https://en.wikipedia.org/wiki/Chocolate">chocolate!</a></p>
 
-  <p> Chocolate is the best food in the world, because it can be made into a drink, a paste,
+  
+  <p id= "important_paragraph"> Chocolate is the best food in the world, because it can be made into a drink, a paste,
   or eaten plain! </p>
 
-  <p> According to Wikipedia, the earliest people to eat chocolate, that we know about were the
+  <p class= "less_important_paragraph"> According to Wikipedia, the earliest people to eat chocolate, that we know about were the
   Olmecs! The Olmecs drank chocolate-based drinks, as early as 1900 BC. </p>
 
 </body>
